# gemini

./: .gitignore  CMakeLists.txt  Gemini.pc.in  README.md  _CORE_INFO(  cmake_install.cmake  conanfile.txt  test
app/: CMakeLists.txt  app.cpp  app.h  cmake_install.cmake  main.cpp  sandbox_app.cpp
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
gemini/: CMakeLists.txt  cmake_install.cmake  gemini.h
gemini/app/: app.h  iapp.cpp  iapp.h
gemini/core/: application.cpp  application.h  core.h  entry.h  keycodes.h  mousecodes.h  window.cpp  window.h
gemini/entity/: entity.h  mesh.h  vertex.h
gemini/events/: app_events.h  event.h  keyboard_events.h  mouse_events.h
gemini/graphics/: allocator.cpp  allocator.h  buffers.h  callbacks.cpp  callbacks.h  command_pool.cpp  command_pool.h  deletion_queue.h  descriptor_set_handler.cpp  descriptor_set_handler.h  device.cpp  device.h  gpu.cpp  gpu.h  graphics.h  graphics_layer.cpp  graphics_layer.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  pipelines.cpp  pipelines.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h
gemini/graphics/buffers/: buffer.cpp  buffer.h  framebuffers.cpp  framebuffers.h  index_buffer.cpp  index_buffer.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
gemini/graphics/descriptors/: descriptor_set.cpp  descriptor_set.h
gemini/graphics/entities/: camera.h  entity.cpp  entity.h  light.h  material.h  mesh.h  push_constant.h  render_object.cpp  render_object.h  transform.h  vertex.h
gemini/graphics/images/: depth_image.cpp  depth_image.h  image.cpp  image.h  textured_image.cpp  textured_image.h
gemini/graphics/math/: math.cpp  math.h
gemini/graphics/meshes/: mesh.h  vertex.h
gemini/graphics/objects/: buffer.cpp  buffer.h  image.cpp  image.h  index_buffer.cpp  index_buffer.h  vertex_buffer.cpp  vertex_buffer.h
gemini/graphics/pools/: command_pool.cpp  command_pool.h
gemini/graphics/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
gemini/layers/: graphics_layer.cpp  graphics_layer.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
gemini/logging/: logger.cpp  logger.h
gemini/shaders/: frag.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  vert.spv
gemini/util/: callbacks.cpp  callbacks.h  log.h  util.h
scripts/: build.sh  buildAll.sh  buildApp.sh
